# project_manager

./: .gitignore  Cargo.toml  README.md
data/: project_types.json
src/: main.rs  pm_error.rs
