[package]
name = "project_manager"
version = "0.1.0"
authors = ["HaNaK0 <hampus@hampushuledal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
directories = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
simple_logger = "1.13"
